syntax = "proto3";
package supervision;
option go_package = "/github.com/kercylan98/minotaur/engine/vivid/supervision";

import "process_id.proto";
import "shared.proto";
import "google/protobuf/timestamp.proto";

// CrossAccidentRecord 事故记录
message CrossAccidentRecord  {
  prc.ProcessId prime_culprit = 1; // 事故元凶（通常是消息发送人，可能不存在或逃逸）
  prc.ProcessId  Victim = 2; // 事故受害者
  prc.ProcessId   Supervisor = 3; // 事故监管者，将由其进行决策
  prc.DeliveryMessage message = 4; // 造成事故发生的消息
  string reason = 5; // 事故原因
  string strategy = 6; // 监管策略名称（如果是远程监管，那么需要确保监管策略在远程方是已注册的）
  CrossAccidentState state = 7; // 事故状态
  bytes Stack = 8; // 堆栈
}

message CrossAccidentState {
  repeated google.protobuf.Timestamp accident_times = 1;
}